# test_qt_windows

./: .gitignore  CMakeLists.txt  common-sdl.cpp  common-sdl.h  common.cpp  main.cpp
.github/workflows/: build.yml
new/: command.cpp  command.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_main.cpp  todos.txt  whisper_wrapper.cpp  whisper_wrapper.hpp
